# NES-Emulator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  NES.cbp  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml  msvc.yml
lib/: CMakeLists.txt
lib/SDL2-VC/cmake/: sdl2-config.cmake
src/: cpu.cpp  main.cpp  main.h  memory.cpp  memory.h  nes.cpp  nes.h  rom.cpp  rom.h
src/core/: core_memory.cpp  main.cpp  memory.cpp  nes.cpp  ppu.cpp  rom.cpp
src/core/include/: core_memory.h  nes.h  ppu.h  rom.h
src/cpu/: cpu.cpp  cpu_test.cpp  logger.cpp  opcodes.cpp
src/cpu/include/: cpu.h  cpu_test.h  opcodes.h
src/display/: display.cpp
src/display/include/: display.h
src/include/: cpu.h  memory.h  nes.h
src/memory/: core_memory.cpp  mapper000.cpp  mapper001.cpp  memory_factory.cpp
src/memory/include/: core_memory.h  mapper000.h  mapper001.h  memory_factory.h
test/: logCompare.py  nestestCompare.py  sources.txt
